--- a/css/theme-elements.css
+++ b/css/theme-elements.css
@@ -14254,7 +14254,7 @@ html.boxed .slider-container {
 
 .social-icons li {
 	display: inline-block;
-	margin: -1px 1px 0 0;
+	margin: 0 2px 0 0;
 	padding: 0;
 	border-radius: 100%;
 	overflow: visible;
@@ -14270,8 +14270,9 @@ html.boxed .slider-container {
 	text-align: center;
 	color: #333 !important;
 	text-decoration: none;
-	font-size: 12.8px;
-	font-size: 0.8rem;
+	/* font-size: 12.8px;
+	font-size: 0.8rem; */
+	font-size: 1.125rem;
 }
 
 .social-icons li:hover a {
@@ -14283,8 +14284,20 @@ html.boxed .slider-container {
 	background: #1aa9e1 !important;
 }
 
+.social-icons li.social-icons-line a {
+	color: #03b904 !important;
+}
+.social-icons li:hover.social-icons-line a {
+	background: #03b904 !important;
+	color: #FFFFFF !important;
+}
+
+.social-icons li.social-icons-facebook a {
+	color: #3b5a9a !important;
+}
 .social-icons li:hover.social-icons-facebook a {
 	background: #3b5a9a !important;
+	color: #FFFFFF !important;
 }
 
 .social-icons li:hover.social-icons-linkedin a {
