--- a/css/custom.css
+++ b/css/custom.css
@@ -23,11 +23,11 @@
   border-radius: 5px;
   color: #FFFFFF;
   font-size: 14px;
-  line-height: 1.5;
+  line-height: 1.3;
   margin: 10px 5px;
-  padding: 14px 10px 10px 10px;
+  padding: 10px 5px 10px 5px;
   text-align: center;
-  width: 100px;
+  width: 90px;
   display: inline-flex;
   align-items: center;
   flex-direction: column;
@@ -54,4 +54,31 @@
   position: absolute;
   top: 0;
   width: 100%;
+}
+
+.special-5 {
+  padding-left: 5px;
+  padding-right: 5px;
+  vertical-align: 0.015rem;
+}
+
+.special-10 {
+  padding-left: 10px;
+  padding-right: 10px;
+  vertical-align: 0.125rem;
+}
+
+.list.list-ordened li.actived::before {
+  color: #ffffff;
+  background-color: #0088CC;
+  transition-duration: 0.3s;
+  transition-property: all;
+  transition-timing-function: linear;
+}
+
+.list.list-ordened li.actived h4 {
+  color: #0088CC;
+  transition-duration: 0.3s;
+  transition-property: all;
+  transition-timing-function: linear;
 }
