--- a/css/custom.css
+++ b/css/custom.css
@@ -1,4 +1,7 @@
 /* Add here all your CSS customizations */
+body {
+  font-family: Arial, "微軟正黑體", "新細明體";
+}
 .blockquote__bg {
   background-color: #FFFFFF;
 }
