--- a/css/custom.css
+++ b/css/custom.css
@@ -123,3 +123,8 @@ body {
     background-size: cover;
   }
 }
+@media screen and (min-width: 576px) and (max-width: 991px) {
+  .modal-dialog {
+    max-width: 90%;
+  }
+}
